crates/apollo-compiler/test_data/diagnostics/0103_invalid_directive_on_input_value.txt
Error: the required argument `@example(arg:)` is not provided
   ╭─[0103_invalid_directive_on_input_value.graphql:4:16]
   │
 1 │ directive @example(arg: String!) on INPUT_FIELD_DEFINITION | ARGUMENT_DEFINITION
   │                    ──────┬─────  
   │                          ╰─────── argument defined here
   │ 
 4 │   key: String! @example
   │                ────┬───  
   │                    ╰───── missing value for argument `arg`
───╯
Error: the required argument `@example(arg:)` is not provided
   ╭─[0103_invalid_directive_on_input_value.graphql:7:32]
   │
 1 │ directive @example(arg: String!) on INPUT_FIELD_DEFINITION | ARGUMENT_DEFINITION
   │                    ──────┬─────  
   │                          ╰─────── argument defined here
   │ 
 7 │ directive @directive(arg2: Int @example) on SCHEMA
   │                                ────┬───  
   │                                    ╰───── missing value for argument `arg`
───╯

